# org_vs_person

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_config.py
archive/failed_feature_engineering/: README.md  analyze_features.py  check_model_classes.py  debug_features.py  debug_iso_features.py  debug_pipeline_order.py  diagnose_performance.py  feature_dropout.py  feature_engineering.py  test_classifier_diagnostics.py  test_feature_engineering.py  train_model_enhanced.py  (+2 more)
corpus/: corpus_config.example.yaml  corpus_config.yaml
docs/: CLASS_IMBALANCE.md  ENGINEERED_FEATURES_POSTMORTEM.md  FAST_ORG_DETECTION.md  FILTER_ACCURACY_ANALYSIS.md  FILTER_PERFORMANCE_ANALYSIS.md  LESSONS_LEARNED.md  PROJECT_CLEANUP.md  README.md  TRAINING_SCRIPT_CLEANUP.md
examples/: batch_classification_demo.py
name_classifier/: __init__.py  classifier.py  config.py  fast_org_detector.py  iso20275_matcher.py
org_vs_person/: __init__.py  classifier.py  config.py  fast_org_detector.py  iso20275_matcher.py  normalization.py
scripts/: benchmark_filter_accuracy.py  benchmark_filter_performance.py  fine_tune_example.sh  monitor_training.sh  prepare_data.py  test_legal_form_precision.py  train_model.py  train_model_backup.py
tests/: test_classifier.py  test_classifier_coverage.py  test_classify_list_confidence.py  test_confidence_api.py  test_config_functions.py  test_data_processing.py  test_fast_org_detector.py  test_integration.py  test_iso20275_matcher.py  test_normalization.py  test_optimizations.py
(+6 files in other folders)
