[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "org-vs-person"
dynamic = ["version"]
description = "A machine learning-based classifier for distinguishing between organization and person names"
readme = "README.md"
requires-python = ">=3.8"
